updates for list follows. ajax call to upkeep old providers

--- a/app/views/updates/_show.erb
+++ b/app/views/updates/_show.erb
@@ -8,20 +8,20 @@
 		<% updates.each do |update| %>
 			<% if update.class == List %>
 
-					<div class="ui link card update">
-					  <a class="image update-list-img" href="/lists/<%= update.id %>">
-					    <img class="owl-lazy update-img" data-src="<%= update.movies.first.img_url %>">
-					  </a>
+				<div class="ui link card update">
+				  <a class="image update-list-img" href="/lists/<%= update.id %>">
+				    <img class="owl-lazy update-img" data-src="<%= update.movies.first.img_url %>">
+				  </a>
 
-					  <div class="update-info">
-							<div class="list-info">
-								<h4><i class="unordered list icon"></i><a href="users/<%= update.user.id %>"><%= update.user.username %></a> created <a href="/lists/<%= update.id %>"><%= update.name %></a></h4>
-								<p>
-									<time class="timeago" datetime="<%= DateTime.parse(update.created_at.to_s).iso8601 %>"></time>
-								</p>
-							</div>	
-					  </div>
-					</div>
+				  <div class="update-info">
+						<div class="list-info">
+							<h4><i class="unordered list icon"></i><a href="users/<%= update.user.id %>"><%= update.user.username %></a> created <a href="/lists/<%= update.id %>"><%= update.name %></a></h4>
+							<p>
+								<time class="timeago" datetime="<%= DateTime.parse(update.created_at.to_s).iso8601 %>"></time>
+							</p>
+						</div>	
+				  </div>
+				</div>
 
 
 			<% elsif update.class == ListMovie %>
@@ -53,7 +53,38 @@
 				  	</div>
 				  </div>
 				</div>
+			<% elsif update.class == UserFollower %>
+				<div class="ui link card">
+				  <a class="image update-user-follower-img" href="">
+				    <img class="owl-lazy update-img" data-src="">
+				  </a>
 
+				  <div class="update-info">
+						<div class="list-info">
+							<h4><i class="user icon"></i><a href="/users/<%= update.follower.id %>"><%= update.follower.username %></a> followed <a href="/users/<%= update.followed.id %>"><%= update.followed.username %></a></h4>
+							<p>
+								<time class="timeago" datetime="<%= DateTime.parse(update.created_at.to_s).iso8601 %>"></time>
+							</p>
+						</div>	
+				  </div>
+				</div>
+
+			<% elsif update.class == ListFollower %>
+		
+				<div class="ui link card update">
+				  <a class="image update-list-img" href="/lists/<%= update.list.id %>">
+				    <img class="owl-lazy update-img" data-src="<%= update.list.movies.first.img_url %>">
+				  </a>
+
+				  <div class="update-info">
+						<div class="list-info">
+							<h4><i class="unordered list icon"></i><a href="users/<%= update.user.id %>"><%= update.user.username %></a> followed <a href="/lists/<%= update.list.id %>"><%= update.list.name %></a></h4>
+							<p>
+								<time class="timeago" datetime="<%= DateTime.parse(update.created_at.to_s).iso8601 %>"></time>
+							</p>
+						</div>	
+				  </div>
+				</div>
 
 			<% end %>
 		<% end %>
