--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -13,19 +13,18 @@
 </head>
 <body>
 
-  <div class="ui fixed inverted menu">
+  <div class="ui fixed menu">
     <div class="ui container nav">
       <a class="header item logo" href="/">Nextflix</a>
       <% if current_user %>
         <div class="item">
-
-<div class="ui category search">
-  <div class="ui icon input">
-    <input class="prompt" type="text" placeholder="Search Nextflix...">
-    <i class="search icon"></i>
-  </div>
-  <div class="results"></div>
-</div>
+          <div class="ui category search">
+            <div class="ui icon input">
+              <input class="prompt" type="text" placeholder="Search Nextflix...">
+              <i class="search icon"></i>
+            </div>
+            <div class="results"></div>
+          </div>
         </div>   
       <% end %>   
       <div class="right menu">
@@ -39,7 +38,6 @@
         <% else %>
           <a class="item" href="/login">Log in</a>
           <a class="item" href="/users/new">Register</a>
-
         <% end %>
       </div>
     </div>
@@ -56,6 +54,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
   <script src="/js/owl/owl.carousel.min.js"></script>
   <script src="/js/mousewheel/jquery.mousewheel.min.js"></script>
+  <script src="/js/fb-auth.js"></script>
   <script src="/js/application.js"></script>
 
 
