--- a/app/views/nouser_layout.erb
+++ b/app/views/nouser_layout.erb
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="/css/application.css">
 
   <script src="/js/jquery.js"></script>
+  <script src="/js/fb-auth.js"></script>
   <script src="/js/application.js"></script>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
 
   <title></title>
