--- a/app/views/updates/_show.erb
+++ b/app/views/updates/_show.erb
@@ -39,7 +39,7 @@
 				  </a>
 
 				  <div class="title-info">
-						<div class="providers-info">
+						<div class="providers-info update">
 							<% if update.movie.providers.length > 0 %>
 								<% update.movie.providers.each do |provider| %>
 									<% if ["hulu_plus", "amazon_prime", "netflix"].include? provider.name %>
