--- a/app/views/users/_followers.erb
+++ b/app/views/users/_followers.erb
@@ -15,7 +15,7 @@
 			      	<div class="ui button">Follow</div>
 			      <% end %>
 			    </div>
-			    <img class="ui avatar image" src="">
+			    <img class="ui tiny image" src="<%= follower.img %>">
 			    <div class="content">
 			      <a href="/users/<%= follower.id %>"><%= follower.username %></a>
 			    </div>
