--- a/app/views/users/_following.erb
+++ b/app/views/users/_following.erb
@@ -6,18 +6,18 @@
 
 	<div class="content">
 		<div class="ui middle aligned divided list">
-			<% user.following.each do |follower| %>
+			<% user.following.each do |followed| %>
 			  <div class="item">
 			    <div class="right floated content">
-			    	<% if current_user.is_following?(follower) %>
+			    	<% if current_user.is_following?(followed) %>
 			    		<div class="ui button">Following</div>
 			    	<% else %>
 			      	<div class="ui button">Follow</div>
 			      <% end %>
 			    </div>
-			    <img class="ui avatar image" src="">
+			    <img class="ui avatar image" src="<%= followed.img %>">
 			    <div class="content">
-			      <a href="/users/<%= follower.id %>"><%= follower.username %></a>
+			      <a href="/users/<%= followed.id %>"><%= followed.username %></a>
 			    </div>
 			  </div>
 			<% end %>
