--- a/public/css/application.css
+++ b/public/css/application.css
@@ -6,25 +6,50 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Open Sans', sans-serif;
 }
 
+nav {
+  float: right;
+}
+
+ul {
+  list-style: none;
+}
+
+li {
+  list-style: none;
+}
+
+nav li {
+  display: inline;
+  margin: 0 10px;
+  vertical-align: middle;
+}
+
 .ui.container {
   width: 90%;
-}
-
-.list-container {
-  margin-bottom: 20px;
-}
-
-.list-container > .list {
-  margin: 2.5px 0;
-}
-
-.list-header > h4 {
-  font-size: 1.4em;
 }
 
 div.ui.container > div.layout.main.content > div.ui.middle.aligned.center.aligned.grid > div.column {
   max-width: 450px;
 }
+
+
+div.container > div.layout.main.content {
+  margin-top: 100px;
+}
+
+
+.main {
+  clear: both;
+}
+
+
+p .errors {
+  display: inline-block;
+}
+
+
+
+/* Owl Carousel Style ===================================================================================*/
 
 .owl-container {
   margin: 0 auto;
@@ -34,6 +59,7 @@ div.ui.container > div.layout.main.content > div.ui.middle.aligned.center.aligne
 
 .owl-container.list {
   margin-top: -70px;
+  min-height: 50px;
 }
 
 .owl-carousel {
@@ -93,12 +119,90 @@ div.ui.container > div.layout.main.content > div.ui.middle.aligned.center.aligne
   z-index: -1;
 }
 
+.owl-item.active.center {
+  box-sizing: border-box;
+}
+
+.owl-item {
+  margin: 0 auto;
+}
+
+.owl-item.active.center > .card {
+  border: solid 3px #545454;
+  max-width: 20em;
+  zoom: 120%;
+  z-index: 10;
+  box-shadow: 5px 5px 5px rgba(0,0,0,0.2);
+}
+
+/*===================================================================================*/
+
+
+/* User Profile styling -----------------------------------------------------*/
+
+
+.profile-header h1, h2 {
+  display: block;
+  margin: 0;
+}
+
+
+.profile-header > .user-stats > div {
+  margin: 0 5%;
+  padding: 0;
+}
+
+.user-stats div h4, .user-stats div span {
+  font-size: 2.9vm;   /* IE9 */
+  font-size: 2.9vmin;
+  text-align: center;
+  display: block;
+  cursor: pointer;
+  padding: 0;
+}
+
+
+
+.ui.pointing.secondary.menu .item:hover {
+  cursor: pointer;
+}
+
+/*----------------------------------------------------------------*/
+
+/* List Style =============================================================================*/
+.list-container {
+  margin-bottom: 20px;
+}
+
+.list-container > .list.list-view {
+  margin: 2.5px 0;
+}
+
+.list-header > h4 {
+  font-size: 1.4em;
+}
+
 .list-header {
   margin-top: 20px;
   margin-bottom: 10px;
+  padding: 10px;
 }
 
 h4.list-name {
+  display: inline;
+}
+
+
+h3.your-lists {
+  display: inline;
+}
+
+a.new-list i {
+  margin-left: 10px;
+  border-radius: 5px;
+}
+
+h2.list-name-header, h3.list-desc-header {
   display: inline;
 }
 
@@ -128,15 +232,15 @@ h4.list-name {
   cursor: pointer;
 }
 
-
 .list-jumbotron {
-  background-color: orange;
   width: 125%;
   margin-left: -10%;
 }
 
 .list-jumbotron .ui.centered.backdrop {
-  max-height: 500px;
+  /*max-height: 500px;*/
+  max-height: 45vm;   /* IE9 */
+  max-height: 45vmin;
   object-fit: cover;
   /*object-position: 0 30%;*/
 }
@@ -144,18 +248,33 @@ h4.list-name {
 .list-jumbotron::after {
   display: block;
   position: relative;
-  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0, #fff 90%);
-  margin-top: -100px;
-  height: 100px;
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0, #fff 100%);
+  margin-top: -125px;
+  height: 125px;
   width: 100%;
   content: '';
 }
+
+div#list-view {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+
+/*+=============================================================================*/
+
+
+/* Item tile info =============================================================================*/
 
 .title-info {
   height: 32px;
   margin-top: -32px;
   z-index: 1;
   position: relative;
+}
+
+.title-info.movie-show {
+  margin-top: 10px;
 }
 
 .title-info.list {
@@ -170,7 +289,7 @@ h4.list-name {
   font-weight: bolder;
 }
 
-.title-info > .providers-info {
+.title-info > .providers-info.update {
   margin-top: -3%;
 }
 
@@ -194,6 +313,9 @@ h4.list-name {
   vertical-align: middle;
 }
 
+.title-info.movie-show > .providers-info > a > img.provider {
+  float: left;
+}
 
 .update-info > .list-info > h4, .update-info > .movie-info > h4  {
   margin-top: 0px;
@@ -221,83 +343,14 @@ h4.list-name {
   float: right;
 }
 
-nav {
-  float: right;
-}
 
-ul {
-  list-style: none;
-}
+/*=============================================================================*/
 
-li {
-  list-style: none;
-}
 
-nav li {
-  display: inline;
-  margin: 0 10px;
-  vertical-align: middle;
-}
+/* Modal Style =============================================================================*/
 
 #searched-titles {
   margin-top: 20px;
-}
-
-.logo {
-  margin-top: 35px;
-  float: left;
-}
-
-
-.main {
-  clear: both;
-}
-
-
-p .errors {
-  display: inline-block;
-}
-
-.profile-header h1, h2 {
-  display: inline-block;
-  margin: 0;
-}
-
-
-.profile-header > .user-stats > div {
-  margin: 0 20px;
-  padding: 0;
-}
-
-.user-stats div h4, .user-stats div span {
-  font-size: 2.8vm;   /* IE9 */
-  font-size: 2.8vmin;
-  text-align: center;
-  display: block;
-  cursor: pointer;
-  padding: 0;
-}
-
-div.container > div.layout.main.content {
-  margin-top: 100px;
-}
-
-h3.your-lists {
-  display: inline;
-}
-
-a.new-list i {
-  margin-left: 10px;
-  border-radius: 5px;
-}
-
-h2.list-name-header, h3.list-desc-header {
-  display: inline;
-}
-
-div#list-view {
-  margin-top: 50px;
-  margin-bottom: 50px;
 }
 
 .ui.basic.modal.confirm-delete > .content > p {
@@ -321,8 +374,6 @@ div#list-view {
 .ui.link.card {
   margin-top: 3.5px;
   margin-bottom: 3px;
-  /*if going with black theme*/
-  /*box-shadow: none;*/
 }
 
 .remove-movie {
@@ -338,24 +389,9 @@ div#list-view {
   font-size: 1.4em;
 }
 
+/*=============================================================================*/
 
-
-.owl-item.active.center {
-  box-sizing: border-box;
-}
-
-.owl-item {
-  margin: 0 auto;
-}
-
-.owl-item.active.center > .card {
-  border: solid 3px #545454;
-  max-width: 20em;
-  zoom: 120%;
-  z-index: 10;
-  box-shadow: 5px 5px 5px rgba(0,0,0,0.2);
-}
-
+/* Updates Style =============================================================================*/
 
 .update-content {
   margin: 50px 0;
@@ -365,11 +401,4 @@ div#list-view {
   cursor: pointer;
 }
 
-
-
-/*.ui.link.card > .update-list-img > .update-img {
-  top: 200px;
-  width: 280px;
-  height: 160px;
-  object-fit: cover;
-}*/
+/*=============================================================================*/
