updated readme. updated to one page app

--- a/app/views/lists/_my_lists.erb
+++ b/app/views/lists/_my_lists.erb
@@ -6,6 +6,9 @@
   <% else %>
   	<% if current_user == user %>
   		<h3 class="no-lists">You have not created any lists yet.</h3>
+  		<% if Time.now - current_user.created_at < 50.days %>
+  			<div class="new-user"></div>
+  		<% end %>
   	<% else %>
   		<h3 class="no-lists"><%= user.username %> has not created any lists yet.</h3>
   	<% end %>
