--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/css/owl/owl.carousel.min.css">
   <link rel="stylesheet" href="/css/owl/owl.theme.default.min.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="//code.jboxcdn.com/0.4.7/jBox.css" rel="stylesheet">  
   <link rel="stylesheet" href="/css/application.css">
 
   <title></title>
@@ -54,7 +55,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
   <script src="/js/owl/owl.carousel.min.js"></script>
   <script src="/js/mousewheel/jquery.mousewheel.min.js"></script>
-  <script src="/js/fb-auth.js"></script>
+  <script src="//code.jboxcdn.com/0.4.7/jBox.min.js"></script>
   <script src="/js/application.js"></script>
 
 
