--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -2,10 +2,13 @@
 
 <% if current_user == user  %>
 	
+	<!-- <span class="tooltip" title="my first test">TESTING</span> -->
+
 	<div class="ui pointing secondary menu">
 	  <div class="active item" data-tab="my-lists">Your Lists <a id="new-list" class="new-list" href="/lists/new"><i class="bordered inverted green plus icon" ></i></a>
 	  	<%= erb :'/lists/_new' %></div>
 	  <div class="item" data-tab="lists-followed">Favorites</div>
+	  <div class="item" data-tab="user-feed">Feed</div>
 	</div>
 	<div class="ui active tab " data-tab="my-lists">
 	  <%= erb :'/lists/_my_lists', locals: {lists: lists, user: user} %>
@@ -13,7 +16,9 @@
 	<div class="ui tab" data-tab="lists-followed">
 	  <%= erb :'/lists/_followed_lists', locals: {lists: current_user.followed_lists} %>
 	</div>
-
+	<div class="ui tab" data-tab="user-feed">
+	  <%= erb :'index', locals: { updates: updates } %>
+	</div>
 <% else %>
 	<%= erb :'/lists/_my_lists', locals: {lists: lists, user: user} %>
 <% end %>
