--- a/public/css/application.css
+++ b/public/css/application.css
@@ -192,6 +192,10 @@ h4.list-name {
   display: inline;
 }
 
+p.list-author {
+  display: inline;
+  margin: 0 5px;
+}
 
 h3.your-lists {
   display: inline;
@@ -315,7 +319,14 @@ div#list-view {
 
 .title-info.movie-show > .providers-info > a > img.provider {
   float: left;
+  width: 32px;
+  height: 32px;
 }
+
+.title-info.movie-show > .providers-info > a > img.provider:hover {
+  zoom: 120%;
+}
+
 
 .update-info > .list-info > h4, .update-info > .movie-info > h4  {
   margin-top: 0px;
@@ -387,6 +398,14 @@ div#list-view {
 .remove-movie:hover {
   transition: font-size 0.2s ease;
   font-size: 1.4em;
+}
+
+.user-following:hover span {
+  display: none;
+}
+
+.user-following:hover:after {
+  content: "Unfollow";
 }
 
 /*=============================================================================*/
