fixed remove movie js

--- a/app/views/updates/_show.erb
+++ b/app/views/updates/_show.erb
@@ -63,7 +63,7 @@
 
 			<% elsif update.class == UserFollower %>
 				<div class="ui link card">
-				  <a class="image update-user-follower-img" href="">
+				  <a class="image update-user-follower-img">
 				  	<div class="ui black left corner label">
 							<i class="user icon"></i>
 				  	</div>
