js new user tutorial done

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -46,6 +46,7 @@
 
   <div class="ui container">
     <div class="layout main content"> 
+      <div class="movie-show"></div>
       <%= yield %>
     </div>
   </div>
