--- a/app/views/lists/_new.erb
+++ b/app/views/lists/_new.erb
@@ -7,11 +7,11 @@
   <form id="create-form" class="ui form" action="/lists" method="POST">
     <div class="field">
       <label>Name</label>
-      <input type="text" name="list[name]" placeholder="Upcoming releases">
+      <input type="text" name="list[name]" placeholder="List name">
     </div>
     <div class="field">
       <label>Description</label>
-      <input type="text" name="list[description]" placeholder="Movies I missed in theater">
+      <input type="text" name="list[description]" placeholder="List description">
     </div>
     <input type="hidden" name="list[user_id]" value="<%= current_user.id %>">
     
