fixed no found movie bug

--- a/app/views/movies/_movies_found.erb
+++ b/app/views/movies/_movies_found.erb
@@ -37,7 +37,7 @@
       <% end %>
     <% end %>
 <% else %>
-  <div id="search-results">
+  <div class="search-results">
     <h3>Sorry, we did not find anything matching that title.</h3>  
   </div>
 <% end %>
