--- a/app/views/nouser_layout.erb
+++ b/app/views/nouser_layout.erb
@@ -29,7 +29,6 @@
             <a class="ui inverted button" href="/logout">Logout</a>
           <% else %>
             <a class="ui inverted button" href="/login">Log in</a>
-            <a class="ui inverted button" href="/users/new">Register</a>
           <% end %>
         </div>
       </div>
@@ -40,7 +39,7 @@
         Find your favorite movies streaming
       </h1>
       <h2>Create lists. Follow friends. Enjoy.</h2>
-      <a class="ui huge primary button" href="/users/new">Get Started <i class="right arrow icon"></i></a>
+      <a class="ui huge primary button" href="/login">Get Started <i class="right arrow icon"></i></a>
     </div>
 
   </div>
