landing page done

--- a/app/views/nouser_layout.erb
+++ b/app/views/nouser_layout.erb
@@ -55,33 +55,26 @@
             <h2 class="ui center aligned header mock-info">Create lists to keep track of where your favorite movies are streaming or create a list for upcoming releases to find out when they are finally available to watch from your couch.</h2>
           </div>
         </div>
+
         <div class="row">
           <div class="eight wide middle aligned column">
             <h2 class="ui center aligned header mock-info">Easily search for new or classic movies to add to your lists.</h2>
           </div>
           <div class="eight wide column">
-            <img class="ui fluid right floated image mockup" src="/images/mockups/search_movie.png" alt="">
-          </div>
-        </div>
-        <div class="centered row ">
-          <div class="eight wide center aligned column ">
-            <h2 class="ui center aligned header mock-info">Watch a movie instantly with just a click.</h2>
-          </div>
-        </div>
-        <div class="centered row ">
-          <div class="eight wide column ">
-            <img class="ui fluid image mockup providers" src="/images/mockups/nfproviders.png" alt="">  
+            <img class="ui fluid right floated image mockup" src="/images/mockups/search_movie.png" alt=""> 
           </div>
         </div>
 
+        <div class="row">
+          <div class="eight wide column">
+            <img class="ui fluid image mockup" src="/images/mockups/feed.png" alt="">
+          </div>
+          <div class="eight wide middle aligned column">
+            <h2 class="ui center aligned header mock-info">Follow other users and their lists for an endless stream of new movie recommendations!</h2>
+          </div>
+        </div>
 
       </div>
-
-
-
-      <div class="mockup-info">
-
-      </div> 
 
     </div>
   </div>
